<!--
  ~ Author: quanprolazer
  ~ Project: Fashione
  ~ An android shopping app writing in Kotlin
  -->

<resources>
    <string name="app_name">Fashione</string>
    <string name="menu_item_home_text">Trang chủ</string>
    <string name="menu_item_profile_text">Cá nhân</string>
    <string name="menu_item_cart_text">Giỏ hàng</string>
    <string name="content_description_notification_icon" translatable="false">Notification icon</string>
    <string name="search_product_text">Tìm kiếm sản phẩm</string>
    <string name="header_category_text">Danh mục</string>
    <string name="header_featured_text">Đặc sắc</string>
    <string name="tv_see_all">Xem tất cả</string>
    <string name="header_best_sell_text">Bán chạy nhất</string>
    <string name="header_suggest_product_text" translatable="false">Gợi ý hôm nay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_choose_color">Chọn màu</string>
    <string name="text_choose_size">Chọn kích cỡ</string>
    <string name="text_add_to_cart">THÊM VÀO GIỎ HÀNG</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_out_text">Đăng xuất</string>
    <string name="text_buy_now">Mua ngay</string>
    <string name="menu_item_personal_sub_title">Cá nhân</string>
    <string name="text_blank_cart">Giỏ hàng đang trống</string>
    <string name="delete_success_text">Đã xóa sản phẩm</string>
    <string name="snack_bar_undo_text">Hoàn tác</string>
    <string name="pay_text">Thanh toán</string>

    <string name="total_price_text">Tổng: %s</string>
    <string name="address_text">Địa chỉ nhận hàng</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_receiver_name">Tên người nhận</string>
    <string name="txt_phone_number">Số điện thoại</string>
    <string name="txt_receiver_name_input">Nhập tên người nhận</string>
    <string name="txt_phone_number_input">Nhập số điện thoại</string>
    <string name="txt_address_input">Nhập địa chỉ</string>
    <string name="txt_personal_type">Nhà riêng</string>
    <string name="txt_organization_type">Cơ quan</string>
    <string name="btn_save">Lưu</string>
    <string name="txt_pickup_tye">Chọn loại địa chỉ:</string>
    <string name="txt_subdistrict_or_village">Phường/Xã</string>
    <string name="txt_district_or_town">Quận/Huyện</string>
    <string name="txt_province_or_city">Tỉnh/Thành phố</string>
    <string name="text_update_address_pickup">Sửa</string>
    <string name="text_no_default">Nhấp để chọn địa điểm ship</string>
    <string name="text_confirm">Đặt hàng</string>
    <string name="text_total_price">Tổng thanh toán</string>
    <string name="text_total_text">Tổng thanh toán</string>
    <string name="text_ship_price">Phí vận chuyển</string>
    <string name="texT_product_price_text">Tổng tiền hàng</string>
    <string name="text_payment_choose">Phương thức thanh toán</string>
    <string name="text_cod">Thanh toán khi nhận hàng</string>
    <string name="text_back_to_home">Quay lại trang chủ</string>
    <string name="text_order_success">Đặt hàng thành công</string>
    <string name="text_purchase">Đơn mua</string>
    <string name="text_purchase_history">Xem lịch sử mua hàng</string>
    <string name="text_re_order">Mua lại</string>
    <string name="app_notification_channel_id" translatable="false">app_channel</string>
    <string name="notification_title" translatable="false">Fashione</string>
    <string name="text_notification_type_order_status">Cập nhật đơn hàng</string>
    <string name="text_new_prod">Hàng mới nhập</string>
    <string name="text_most_view_in_month">Xem nhiều trong tháng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_total_price_checkout_item">Tổng tiền:</string>
    <string name="text_require_pickup_address">Vui lòng chọn địa chỉ nhận hàng</string>
    <string name="text_add_pickup_address_error">Vui lòng thử lại</string>
    <string name="text_add_new_pickup_address">Thêm địa chỉ mới</string>
    <string name="text_decrement">-</string>
    <string name="text_increment">+</string>
    <string name="text_not_login">Bạn chưa đăng nhập</string>
    <string name="text_empty_notification">Chưa có thông báo nào</string>
    <string name="text_empty" />
    <string name="text_enter_message">Nhập tin nhắn</string>
    <string name="text_send_message">Gửi</string>
    <string name="text_confirming">Đang xác nhận</string>
    <string name="text_collecting">Chờ lấy hàng</string>
    <string name="text_delivering">Đang giao</string>
    <string name="text_delivered">Đã giao</string>
    <string name="text_completed">Hoàn thành</string>
    <string name="text_add_review">Đánh giá</string>
    <string name="text_pickup_address">Địa chỉ nhận hàng</string>
    <string name="text_description">Mô tả</string>
    <string name="text_reviews">ĐÁNH GIÁ SẢN PHẨM</string>
    <string name="text_see_all">Xem tất cả</string>
    <string name="text_not_review_yet">Chưa có nhận xét nào</string>
    <string name="text_end_review">Đã hết nhận xét</string>
    <string name="text_not_live_videos">Hiện không có video trực tiếp nào</string>
    <string name="text_review">Đánh giá sản phẩm</string>
    <string name="text_review_title">Tiêu đề đánh giá</string>
    <string name="text_add_review_title">Thêm tiêu đề đánh giá ở đây</string>
    <string name="text_review_body">Nội dung đánh giá</string>
    <string name="text_add_review_body">Thêm ý kiến của bạn về sản phẩm</string>
    <string name="text_add_review_confirm">Xác nhận</string>
    <string name="text_empty_cart_invite">Tiếp tục mua sắm từ Fashione nhé</string>
    <string name="text_admin">admin</string>
    <string name="text_add_review_now">Đánh giá sản phẩm ngay</string>

    <string name="text_quantity" translatable="false">x%s</string>
    <string name="text_address_pickup_contact" translatable="false">%s - %s</string>
    <string name="text_address_pickup" translatable="false">%s, %s, %s, %s</string>
    <string name="text_overview_rate" translatable="false">%s/5</string>
    <string name="text_review_date" translatable="false">%s | %s - %s</string>
    <string name="text_order_type" translatable="false">Loại: %s - %s</string>
    <string name="text_variant_quantity" translatable="false">%s sản phẩm</string>
    <string name="text_live_video">Trực tiếp</string>
    <string name="text_message">Nhắn tin</string>
    <string name="text_frag_address_pickup">Địa chỉ nhận hàng</string>
    <string name="text_frag_add_address_pickup">Thêm địa chỉ nhận hàng</string>
    <string name="text_notification">Thông báo</string>
    <string name="text_video_playing">Đang phát video</string>
    <string name="text_review_count">%s đánh giá</string>
    <string name="text_review_rate">%s/5.0 (%s đánh giá)</string>
</resources>