<?xml version="1.0" encoding="utf-8"?><!--
  ~ Author: quanprolazer
  ~ Project: Fashione
  ~ An android shopping app writing in Kotlin
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_item_home"
            android:title="@string/menu_item_home_text" />

        <item
            android:id="@+id/menu_item_cart"
            android:title="@string/menu_item_cart_text" />
        <item
            android:id="@+id/menu_item_videos"
            android:title="Trực tiếp" />
    </group>

    <group>
        <item android:title="@string/menu_item_personal_sub_title">
            <menu>
                <item
                    android:id="@+id/menu_item_message"
                    android:title="Nhắn tin" />
                <item
                    android:id="@+id/menu_item_personal"
                    android:title="@string/menu_item_profile_text" />
                <item
                    android:id="@+id/menu_item_login"
                    android:title="@string/login" />
            </menu>
        </item>
    </group>
</menu>

